// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section renders with title, subtitle, actions and content 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
    >
      <div
        class="PicassoSection-header"
        data-testid="header"
      >
        <h3
          class="MuiTypography-root PicassoTypography-headingMedium PicassoSection-title MuiTypography-h3"
          data-testid="title"
        >
          Title
        </h3>
        <p
          class="MuiTypography-root PicassoTypography-bodyMedium PicassoTypography-darkGrey PicassoSection-subtitle MuiTypography-body1"
          data-testid="subtitle"
        >
          Subtitle
        </p>
        <div
          class="PicassoSection-actions"
          data-testid="actions"
        >
          Actions
        </div>
      </div>
      <div
        data-testid="content"
      />
    </div>
  </div>
</div>
`;

exports[`Section renders without header 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
    >
      <div
        data-testid="content"
      />
    </div>
  </div>
</div>
`;
